--- a/instruction.html
+++ b/instruction.html
@@ -80,7 +80,7 @@
             <li>Можно решать задания в любом порядке.</li>
             <li>Следи за своим прогрессом — баллы сохраняются автоматически!</li>
         </ol>
-        <a href="index.html">← На главную карту</a>
+        <a href="first.html">← На главную карту</a>
     </div>
 </body>
 
