--- a/task_embankment.html
+++ b/task_embankment.html
@@ -125,7 +125,7 @@
         <button id="hintButton" style="display: none;" onclick="showHint()">Показать подсказку</button>
         <p id="hintText" style="display: none;">Промилле — это граммы на литр. 1 промилле = 1 г/л.</p>
         <div id="scoreDisplay" style="margin-top: 20px;"></div>
-        <a href="index.html">← Назад к карте</a>
+        <a href="first.html">← Назад к карте</a>
     </div>
 
     <script>
