--- a/task_registry_office.html
+++ b/task_registry_office.html
@@ -122,7 +122,7 @@
         <button id="hintButton" style="display: none;" onclick="showHint()">Показать подсказку</button>
         <p id="hintText" style="display: none;">Подсказка: A = AA, B = BB. Скрести AA × BB.</p>
         <div id="scoreDisplay" style="margin-top: 20px;"></div>
-        <a href="index.html">← Назад к карте</a>
+        <a href="first.html">← Назад к карте</a>
     </div>
 
     <script>
