--- a/task_road.html
+++ b/task_road.html
@@ -123,7 +123,7 @@
         <button id="hintButton" style="display: none;" onclick="showHint()">Показать подсказку</button>
         <p id="hintText" style="display: none;">Подсказка: нужны дробные числа с высокой точностью.</p>
         <div id="scoreDisplay" style="margin-top: 20px;"></div>
-        <a href="index.html">← Назад к карте</a>
+        <a href="first.html">← Назад к карте</a>
     </div>
 
     <script>
