--- a/task_square.html
+++ b/task_square.html
@@ -132,7 +132,7 @@
 
     <div id="scoreDisplay" style="margin-top: 20px;"></div>
 
-    <a href="index.html">← Назад к карте</a>
+    <a href="first.html">← Назад к карте</a>
   </div>
 
   <script>
