--- a/task_university.html
+++ b/task_university.html
@@ -129,7 +129,7 @@
 
         <div id="scoreDisplay" style="margin-top: 20px;"></div>
 
-        <a href="index.html">← Назад к карте</a>
+        <a href="first.html">← Назад к карте</a>
     </div>
 
     <script>
