--- a/first.html
+++ b/first.html
@@ -159,6 +159,7 @@
             padding: 15px;
             text-align: center;
             border-top: 1px solid #555;
+            margin-top: -10px;
         }
 
         .support a {
